--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -17,8 +17,8 @@ WORKDIR /tmp
 #     rm -rf PyMuPDF-$VERSION $VERSION.tar.gz  # Clean up && \
 #     apk del python3 py3-pip musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake python3-dev build-base swig
 RUN <<EOF
-    pip install --break-system-packages libclang && \
-    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git && \
+    pip install --break-system-packages libclang
+    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
     cd PyMuPDF-julian && PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf pip install .
 EOF
     # PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
