--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -16,10 +16,23 @@ WORKDIR /tmp
 #     cd .. && \
 #     rm -rf PyMuPDF-$VERSION $VERSION.tar.gz  # Clean up && \
 #     apk del python3 py3-pip musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake python3-dev build-base swig
-RUN <<EOF
-    pip install --break-system-packages libclang
-    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
-    cd PyMuPDF-julian && PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf pip install .
-EOF
+# RUN <<EOF
+#     pip install --break-system-packages libclang
+#     git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
+#     cd PyMuPDF-julian && PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf pip install .
+# EOF
     # PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
+
+# Erstelle und aktiviere ein virtuelles Umfeld
+RUN python3 -m venv /venv && \
+    . /venv/bin/activate && \
+    pip install --upgrade pip && \
+    pip install libclang && \
+    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git && \
+    cd PyMuPDF-julian && \
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf pip install . && \
+    deactivate
+
+WORKDIR /
+
 WORKDIR /
