--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -24,15 +24,11 @@ WORKDIR /tmp
     # PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
 
 # Erstelle und aktiviere ein virtuelles Umfeld
-RUN python -m venv pymupdf-venv && \
-    . pymupdf-venv/bin/activate && \
-    python -m pip install --upgrade pip && \
-    pip install libclang && \
+RUN <<EOF
+    pip install --break-system-packages libclang && \
     git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git && \
     cd PyMuPDF-julian && \
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf pip install . && \
-    deactivate
-
-WORKDIR /
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=/usr/bin/mupdf python3 setup.py install
+EOF
 
 WORKDIR /
