--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -29,7 +29,7 @@ RUN <<EOF
     pip install --break-system-packages libclang
     git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
     cd PyMuPDF-julian
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD=../usr/bin/mupdf python3 setup.py install
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD= python3 setup.py install
 EOF
 
 WORKDIR /
