--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -24,12 +24,12 @@ WORKDIR /tmp
     # PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
 
 # Erstelle und aktiviere ein virtuelles Umfeld
-RUN <<EOF
-    find / -name mupdf
-    pip install --break-system-packages libclang
-    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
-    cd PyMuPDF-julian
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD= python3 setup.py install
-EOF
+# RUN <<EOF
+#     find / -name mupdf
+#     pip install --break-system-packages libclang
+#     git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
+#     cd PyMuPDF-julian
+#     PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_BUILD= python3 setup.py install
+# EOF
 
 WORKDIR /
