--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -1,6 +1,6 @@
 FROM alpine:3.20.2
 
-RUN apk update --no-cache -a && \
+RUN apk upgrade --no-cache -a && \
     apk add --no-cache python3 \
     py3-pip \
     musl-dev \
