--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -39,13 +39,12 @@ WORKDIR /tmp
     # PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
 
 # Erstelle und aktiviere ein virtuelles Umfeld
-# RUN <<EOF
-#     find / -name mupdf
-#     pip install --break-system-packages libclang
-#     git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
-#     cd PyMuPDF-julian
-#     PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_REBUILD=0 python3 setup.py install
-# EOF
+RUN <<EOF
+    pip install --break-system-packages libclang
+    git clone https://github.com/ArtifexSoftware/PyMuPDF-julian.git
+    cd PyMuPDF-julian
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_REBUILD=0 python3 setup.py install
+EOF
 
 WORKDIR /
 
