--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -7,12 +7,12 @@ RUN apk upgrade --no-cache -a && \
     jpeg-dev \
     zlib-dev \
     freetype-dev \
-    clang \
+    # clang \
     # clang-dev \
-    llvm \
-    m4 \
+    # llvm \
+    # m4 \
     cmake \
-    # python3-dev \
+    python3-dev \
     # build-base \
     swig \
     git
@@ -48,4 +48,4 @@ EOF
 
 WORKDIR /
 
-RUN apk del python3 py3-pip musl-dev jpeg-dev zlib-dev freetype-dev clang llvm m4 cmake swig git
+RUN apk del python3 py3-pip musl-dev jpeg-dev zlib-dev freetype-dev cmake swig git
