--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -44,7 +44,7 @@ RUN <<EOF
     wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/$VERSION.tar.gz && \
     tar -xvf $VERSION.tar.gz && \
     cd PyMuPDF-$VERSION && \
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 PYMUPDF_SETUP_MUPDF_REBUILD=0 python3 setup.py install
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
 EOF
 
 WORKDIR /
