--- a/Dockerfile-PyMuPDF-2
+++ b/Dockerfile-PyMuPDF-2
@@ -33,13 +33,10 @@ RUN pip install --break-system-packages libclang && \
     cd PyMuPDF-$VERSION && \
     PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install
 
+WORKDIR /
+
 # Prepare Final Image
 FROM alpine:3.20.2
-
-# Copy application files from build stage
-COPY --from=build /usr/local/lib/python3.12 /usr/local/lib/python3.12
-COPY --from=build /usr/local/bin /usr/local/bin
-COPY --from=build /usr/lib/python3.12 /usr/lib/python3.12
 
 # Install runtime dependencies
 RUN apk upgrade --no-cache -a && \
@@ -74,6 +71,11 @@ COPY scripts /scripts
 COPY pipeline /pipeline
 COPY src/main/resources/static/fonts/*.ttf /usr/share/fonts/opentype/noto/
 COPY build/libs/*.jar /app.jar
+
+# Copy application files from build stage
+COPY --from=build /usr/local/lib/python3.12 /usr/local/lib/python3.12 || true
+COPY --from=build /usr/local/bin /usr/local/bin || true
+COPY --from=build /usr/lib/python3.12 /usr/lib/python3.12 || true
 
 # Set environment variables
 ENV DOCKER_ENABLE_SECURITY=false \
