--- a/Dockerfile-PyMuPDF-2
+++ b/Dockerfile-PyMuPDF-2
@@ -73,9 +73,9 @@ RUN apk upgrade --no-cache -a && \
     tesseract --list-langs
 
 # Copy application files from build stage
-COPY --from=build /usr/local/lib/python3.12 /usr/local/lib/python3.12 || true
-COPY --from=build /usr/local/bin /usr/local/bin || true
-COPY --from=build /usr/lib/python3.12 /usr/lib/python3.12 || true
+COPY --from=build /usr/local/lib/python3.12 /usr/local/lib/python3.12
+COPY --from=build /usr/local/bin /usr/local/bin
+COPY --from=build /usr/lib/python3.12 /usr/lib/python3.12
 
 # Set environment variables
 ENV DOCKER_ENABLE_SECURITY=false \
