ludy87/pymupdf:latest

--- a/Dockerfile-fat
+++ b/Dockerfile-fat
@@ -12,7 +12,8 @@ RUN DOCKER_ENABLE_SECURITY=true \
 ./gradlew clean build
 
 # Main stage
-FROM alpine:3.20.2
+FROM ludy87/pymupdf:latest
+# FROM alpine:3.20.2
 
 # Copy necessary files
 COPY scripts /scripts
@@ -22,6 +23,7 @@ COPY --from=build /app/build/libs/*.jar app.jar
 
 ARG VERSION_TAG
 
+ENV VERSION=1.24.9
 # Set Environment Variables
 ENV DOCKER_ENABLE_SECURITY=false \
     VERSION_TAG=$VERSION_TAG \
@@ -46,6 +48,10 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
         bash \
         curl \
         shadow \
+        # pymupdf
+        musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig \
+        # pymupdf
+        # musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig \
         su-exec \
         openssl \
         openssl-dev \
@@ -62,16 +68,10 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
         py3-opencv \
 # python3/pip
         python3 \
-        py3-pip \
-        mupdf
+    py3-pip && \
 # uno unoconv and HTML
-# Create virtual environment and install Python packages
-RUN python3 -m venv /opt/venv && \
-    . /opt/venv/bin/activate && \
     pip install --break-system-packages --no-cache-dir --upgrade unoconv WeasyPrint && \
-    pip install --no-cache-dir --upgrade pymupdf==1.24.2
-
-RUN mv /usr/share/tessdata /usr/share/tessdata-original && \
+    mv /usr/share/tessdata /usr/share/tessdata-original && \
     mkdir -p $HOME /configs /logs /customFiles /pipeline/watchedFolders /pipeline/finishedFolders && \
     fc-cache -f -v && \
     chmod +x /scripts/* && \
@@ -81,6 +81,19 @@ RUN mv /usr/share/tessdata /usr/share/tessdata-original && \
     chown -R stirlingpdfuser:stirlingpdfgroup $HOME /scripts /usr/share/fonts/opentype/noto /configs /customFiles /pipeline && \
     chown stirlingpdfuser:stirlingpdfgroup /app.jar && \
     tesseract --list-langs
+
+WORKDIR /tmp
+RUN <<EOF
+    pip install --break-system-packages --no-cache-dir libclang
+    wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/$VERSION.tar.gz
+    tar -xvf $VERSION.tar.gz
+    cd PyMuPDF-$VERSION
+    PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install && \
+    cd .. && \
+    rm -rf PyMuPDF-$VERSION $VERSION.tar.gz  # Clean up
+EOF
+RUN apk del musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig
+WORKDIR /
 
 EXPOSE 8080/tcp
 
