--- a/Dockerfile-fat
+++ b/Dockerfile-fat
@@ -12,7 +12,7 @@ RUN DOCKER_ENABLE_SECURITY=true \
 ./gradlew clean build
 
 # Main stage
-FROM ludy87/pymupdf:latest
+FROM ludy87/pymupdf:1.24.9
 # FROM alpine:3.20.2
 
 # Copy necessary files
