--- a/Dockerfile-fat
+++ b/Dockerfile-fat
@@ -49,7 +49,7 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
         curl \
         shadow \
         # pymupdf
-        musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig \
+        # musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig \
         # pymupdf
         # musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig \
         su-exec \
@@ -82,18 +82,18 @@ RUN echo "@testing https://dl-cdn.alpinelinux.org/alpine/edge/main" | tee -a /et
     chown stirlingpdfuser:stirlingpdfgroup /app.jar && \
     tesseract --list-langs
 
-WORKDIR /tmp
-RUN <<EOF
-    pip install --break-system-packages --no-cache-dir libclang
-    wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/$VERSION.tar.gz
-    tar -xvf $VERSION.tar.gz
-    cd PyMuPDF-$VERSION
-    PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install && \
-    cd .. && \
-    rm -rf PyMuPDF-$VERSION $VERSION.tar.gz  # Clean up
-EOF
-RUN apk del musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig
-WORKDIR /
+# WORKDIR /tmp
+# RUN <<EOF
+#     pip install --break-system-packages --no-cache-dir libclang
+#     wget https://github.com/pymupdf/PyMuPDF/archive/refs/tags/$VERSION.tar.gz
+#     tar -xvf $VERSION.tar.gz
+#     cd PyMuPDF-$VERSION
+#     PYMUPDF_SETUP_MUPDF_TESSERACT=0 python3 setup.py install && \
+#     cd .. && \
+#     rm -rf PyMuPDF-$VERSION $VERSION.tar.gz  # Clean up
+# EOF
+# RUN apk del musl-dev jpeg-dev zlib-dev freetype-dev clang clang-dev llvm m4 cmake build-base swig
+# WORKDIR /
 
 EXPOSE 8080/tcp
 
