--- a/Dockerfile-PyMuPDF
+++ b/Dockerfile-PyMuPDF
@@ -34,18 +34,13 @@ EOF
 
 WORKDIR /
 
-# RUN apk del python3 \
-#     py3-pip \
-#     musl-dev \
-#     jpeg-dev \
-#     zlib-dev \
-#     freetype-dev \
-#     clang \
-#     clang-dev \
-#     llvm \
-#     m4 \
-#     cmake \
-#     python3-dev \
-#     build-base \
-#     swig \
-#     git
+RUN apk del \
+    clang \
+    clang-dev \
+    llvm \
+    m4 \
+    cmake \
+    build-base \
+    python3-dev \
+    swig \
+    git
