--- a/.github/workflows/pymupdf.yml
+++ b/.github/workflows/pymupdf.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
-          file: ./Dockerfile-PyMuPDF
+          file: .github/scripts/docker/Dockerfile-PyMuPDF
           push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
